fix(style) ensure that archive year remains left-aligned
Previously, if there were only few items to the right of the year
label, it was possible for the next year label to float on the right
of the previous year.

This patch fixes that by clearing floats around the label.

Closes #568

--- a/static/css/elegant.css
+++ b/static/css/elegant.css
@@ -218,6 +218,7 @@ a:not(.collapsed).accordion-toggle.category-title-inside-accordion {
 }
 div.blog-archives h2 {
   float: left;
+  clear: both;
   position: relative;
   margin: 0;
 }
